[280892] ODA Dynamic Query Result Specification Enhancements - Filter Spec Validation

--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
@@ -63,12 +63,17 @@ querySpec_INVALID_ARG=Invalid argument: {0}.
 querySpec_INVALID_CLASS_TYPE_ATTRIBUTE=Invalid class type ({0}).  The {1} attribute must be an instance of {2}.
 querySpec_INVALID_EXT_POINT_ATTR_VALUE=The {0} extension ({1}) has an invalid value ({2}) for the {3} attribute.
 querySpec_INVALID_EXT_POINT_ELEMENT=The {0} extension ({1}) is invalid.  See the schema definition for required content.
+querySpec_MAX_ONE_NEGATING_EXPR=Cannot add more than one negating expression to a {0}.
 querySpec_MISSING_COMPOSITE_MIN_CHILDREN=The composite {0} must contain at least {1} child expressions.
+querySpec_MISSING_EXPR_VARIABLE=The filter expression ({0}) is missing an associated variable.
 querySpec_MISSING_EXT_POINT_ATTR_VALUE=The {0} extension ({1}) is missing the {2} attribute value in the {3} element.
 querySpec_MISSING_EXT_POINT_ELEMENT=The {0} extension ({1}) is missing the {2} element.
 querySpec_MISSING_EXT_POINT_MIN_ELEMENT=The {0} extension ({1}) must have at least one {2} element defined .
-querySpec_NON_DEFINED_CUSTOM_AGGR=The custom aggregate expression ({0}.{1}) is not found in the dynamicResultSet extension registry.
-querySpec_NON_DEFINED_CUSTOM_FILTER=The custom filter expression ({0}.{1}) is not found in the dynamicResultSet extension registry.
+querySpec_NON_DEFINED_CUSTOM_AGGR=The custom aggregate expression ({0}) is not found in the dynamicResultSet extension registry.
+querySpec_NON_DEFINED_CUSTOM_FILTER=The custom filter expression ({0}) is not found in the dynamicResultSet extension registry.
 querySpec_NOT_EXPR_INCOMPATIBLE=Invalid use of a non-negatable expression ({0}) in a {1}.
 querySpec_NOT_EXPR_MISSING_CHILD=Missing negating expression in NotExpression: ({0}).
 querySpec_UNABLE_ADD_TO_NON_LIST_COLLECTION=Unable to add a value to existing values.  The existing value is not a java.util.List.
+querySpec_UNEXPECTED_CUSTOM_EXPR_EXTENSION=Unable to support the custom filter expression ({0}) of other extension.
+querySpec_UNEXPECTED_CUSTOM_EXPR_TYPE=The custom filter expression ({0}) is not a {1} instance.\n Consumer application must use ExpressionFactory\#createCustomExpression to create a custom filter expression instance.
+querySpec_UNEXPECTED_EXPR_VARIABLE_TYPE=Cannot support this type of ExpressionVariable ({1}).
