--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
@@ -54,11 +54,14 @@ profileProperty_PROFILE_NAME=Connection &Profile Name
 profileProperty_PROFILE_STORE_PATH=Connection Profile Store &URL
 profileProperty_GROUP_PROPERTIES=External Connection Profile Reference
 #
+querySpec_CUSTOM_AGGR_EXCEED_MAX_ARGS=The custom filter expression ({0}) has {1} arguments, but allows a maximum of {2} arguments.
 querySpec_CUSTOM_AGGR_INCOMPATIBLE_DUPL_CHECK=The custom aggregate type ({0}) cannot ignore duplicate values.
 querySpec_CUSTOM_AGGR_INCOMPATIBLE_NULL_CHECK=The custom aggregate type ({0}) cannot ignore null values.
+querySpec_CUSTOM_AGGR_LESS_THAN_MIN_ARGS=The custom aggregate expression ({0}) has {1} arguments, but requires a minimum of {2} arguments.
 querySpec_CUSTOM_FILTER_EXCEED_MAX_ARGS=The custom filter expression ({0}) has {1} arguments, but allows a maximum of {2} arguments.
-querySpec_CUSTOM_FILTER_MISSING_MIN_ARGS=The custom filter expression ({0}) has {1} arguments, but requires a minimum of {2} arguments.
+querySpec_CUSTOM_FILTER_LESS_THAN_MIN_ARGS=The custom filter expression ({0}) has {1} arguments, but requires a minimum of {2} arguments.
 querySpec_EXTENSION_ID_NOT_FOUND=No {0} extension found with the id ({1}).
+querySpec_INVALID_AGGR_EXPR=Invalid aggregate expression.
 querySpec_INVALID_ARG=Invalid argument: {0}.
 querySpec_INVALID_CLASS_TYPE_ATTRIBUTE=Invalid class type ({0}).  The {1} attribute must be an instance of {2}.
 querySpec_INVALID_EXT_POINT_ATTR_VALUE=The {0} extension ({1}) has an invalid value ({2}) for the {3} attribute.
@@ -72,9 +75,12 @@ querySpec_MISSING_EXT_POINT_ELEMENT=The {0} extension ({1}) is missing the {2} e
 querySpec_MISSING_EXT_POINT_MIN_ELEMENT=The {0} extension ({1}) must have at least one {2} element defined .
 querySpec_NON_DEFINED_CUSTOM_AGGR=The custom aggregate expression ({0}) is not found in the dynamicResultSet extension registry.
 querySpec_NON_DEFINED_CUSTOM_FILTER=The custom filter expression ({0}) is not found in the dynamicResultSet extension registry.
+querySpec_NONSUPPORTED_VAR_DATA_TYPE=The native data type ({0}) of the expression variable ({1}) is not supported by the type of custom expression used.
 querySpec_NOT_EXPR_INCOMPATIBLE=Invalid use of a non-negatable expression ({0}) in a {1}.
 querySpec_NOT_EXPR_MISSING_CHILD=Missing negating expression in NotExpression: ({0}).
 querySpec_UNABLE_ADD_TO_NON_LIST_COLLECTION=Unable to add a value to existing values.  The existing value is not a java.util.List.
+querySpec_UNEXPECTED_AGGR_EXPR_EXTENSION=Unable to support the custom aggregate expression ({0}) of other extension.
+querySpec_UNEXPECTED_AGGR_EXPR_TYPE=The custom aggregate expression ({0}) is not a {1} instance. Consumer application must use ExpressionFactory\#createCustomAggregate to create a custom expression instance.
 querySpec_UNEXPECTED_CUSTOM_EXPR_EXTENSION=Unable to support the custom filter expression ({0}) of other extension.
 querySpec_UNEXPECTED_CUSTOM_EXPR_TYPE=The custom filter expression ({0}) is not a {1} instance.\n Consumer application must use ExpressionFactory\#createCustomExpression to create a custom filter expression instance.
 querySpec_UNEXPECTED_EXPR_VARIABLE_TYPE=Cannot support this type of ExpressionVariable ({1}).
