[280892] ODA Dynamic Query Result Specification Enhancements - refine query spec

--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
@@ -62,11 +62,15 @@ querySpec_CUSTOM_FILTER_EXCEED_MAX_ARGS=The custom filter expression ({0}) has {
 querySpec_CUSTOM_FILTER_LESS_THAN_MIN_ARGS=The custom filter expression ({0}) has {1} arguments, but requires a minimum of {2} arguments.
 querySpec_EXTENSION_ID_NOT_FOUND=No {0} extension found with the id ({1}).
 querySpec_INVALID_AGGR_EXPR=Invalid aggregate expression.
+querySpec_INVALID_AGGR_HIDE_COLUMN=Invalid aggregate projection on a hidden column {0}.
 querySpec_INVALID_ARG=Invalid argument: {0}.
 querySpec_INVALID_CLASS_TYPE_ATTRIBUTE=Invalid class type ({0}).  The {1} attribute must be an instance of {2}.
 querySpec_INVALID_EXT_POINT_ATTR_VALUE=The {0} extension ({1}) has an invalid value ({2}) for the {3} attribute.
 querySpec_INVALID_EXT_POINT_ELEMENT=The {0} extension ({1}) is invalid.  See the schema definition for required content.
 querySpec_INVALID_FILTER_EXPR=Invalid filter expression.
+querySpec_INVALID_RESULT_PROJ=Invalid result projection.
+querySpec_INVALID_SORT_KEY=Invalid sort key.
+querySpec_INVALID_SORT_SPEC=Invalid sort specification.
 querySpec_MAX_ONE_NEGATING_EXPR=Cannot add more than one negating expression to a {0}.
 querySpec_MISSING_COMPOSITE_MIN_CHILDREN=The composite {0} must contain at least {1} child expressions.
 querySpec_MISSING_EXPR_VARIABLE=The filter expression ({0}) is missing an associated variable.
