NEW - bug 285876: TVT35:TCT437: CHT: Add button without mnemonic key https://bugs.eclipse.org/bugs/show_bug.cgi?id=285876

--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
@@ -35,7 +35,7 @@ TemplateDescriptor.msg.name_missing = An extension for extension-point org.eclip
 TemplateDescriptor.msg.driverTypeDescriptorCreationError = Problem encountered while creating a driver template descriptor.
 
 DriverPreferences.label.availableDrivers = Driver de&finitions:
-DriverPreferences.button.addDriver = Add...
+DriverPreferences.button.addDriver = &Add...
 DriverPreferences.DriverTypeFilter=Driver Type Filter:
 DriverPreferences.VendorFilter=Filter:
 DriverPreferences.NameColumn=Name
