NEW - bug 276812: Missing accelerator key for fields on Connection profile wizard https://bugs.eclipse.org/bugs/show_bug.cgi?id=276812

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/ui/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/ui/messages.properties
@@ -5,6 +5,6 @@ ProfileImageDescriptor_target_profile_image_not_null=The icon for the profile im
 DriverClassEditDialog_Type_option_button=Type class name
 DriverClassEditDialog_Browse_option_button=Browse for class
 DriverClassEditDialog_populate_classes_button=Populate class list
-ConnectionProfileDetailsPage_Autoconnect_finish=Connect when the wizard completes
-ConnectionProfileDetailsPage_Autoconnect_startup=Connect every time the workbench is started
+ConnectionProfileDetailsPage_Autoconnect_finish=&Connect when the wizard completes
+ConnectionProfileDetailsPage_Autoconnect_startup=Connect every time the workbench is &started
 CPWizardSelectionPage_default_filter_text=type filter text
