[280892] ODA Dynamic Query Result Specification Enhancements - Refined sort spec validation

--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
@@ -79,6 +79,7 @@ querySpec_MISSING_EXT_POINT_ELEMENT=The {0} extension ({1}) is missing the {2} e
 querySpec_MISSING_EXT_POINT_MIN_ELEMENT=The {0} extension ({1}) must have at least one {2} element defined .
 querySpec_NON_DEFINED_CUSTOM_AGGR=The custom aggregate expression ({0}) is not found in the dynamicResultSet extension registry.
 querySpec_NON_DEFINED_CUSTOM_FILTER=The custom filter expression ({0}) is not found in the dynamicResultSet extension registry.
+querySpec_NONSUPPORTED_NULL_ORDERING=Null ordering specification is not supported by the data source provider.
 querySpec_NONSUPPORTED_VAR_DATA_TYPE=The native data type ({0}) of the expression variable ({1}) is not supported by the type of custom expression used.
 querySpec_NOT_EXPR_INCOMPATIBLE=Invalid use of a non-negatable expression ({0}) in a {1}.
 querySpec_NOT_EXPR_MISSING_CHILD=Missing negating expression in NotExpression: ({0}).
