[285468] Created a separate New... button label for translation

--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
@@ -55,6 +55,7 @@ profilePage_checkboxTooltip_maintainLink=Always use the Connection Profile Store
 profilePage_checkboxLabel_maintainLink=Use &externalized properties in Connection Profile Store
 profilePage_error_invalidName=Data source name is invalid.
 profilePage_error_invalidProfileStorePath=Invalid path for a connection profile store
+profileStoreCreationDialog_button_new=Ne&w...
 profileStoreCreationDialog_title=Create a Connection Profile Store
 profileStoreCreationDialog_grouptext=Select the connection &profiles to be included in the store:
 profileStoreCreationDialog_newbutton_tooltiptext=Create a new connection profile
