NEW - bug 285485: Errors found in Java Properties Files https://bugs.eclipse.org/bugs/show_bug.cgi?id=285485

--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/src/org/eclipse/datatools/connectivity/sqm/server/internal/ui/l10n/datatoolsServerUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/src/org/eclipse/datatools/connectivity/sqm/server/internal/ui/l10n/datatoolsServerUI.properties
@@ -71,7 +71,8 @@ _UI_DIALOG_CONNECTION_TITLE  = New Connection
 ## Error Connection Dialog
 #
 DATATOOLS.SERVER.UI.CONNECTION.ERROR.TITLE = Invalid Connection Exception
-DATATOOLS.SERVER.UI.CONNECTION.ERROR.MESSAGE = Connection failed
+#Removed for bug 285485
+#DATATOOLS.SERVER.UI.CONNECTION.ERROR.MESSAGE = Connection failed
 DATATOOLS.SERVER.UI.CONNECTION.SQLEXCEPTION.TITLE = SQL Exception Notification
 DATATOOLS.SERVER.UI.CONNECTION.SQLEXCEPTION.RECONNECT = Reconnect
 DATATOOLS.SERVER.UI.CONNECTION.SQLEXCEPTION.DISCONNECT = Disconnect
@@ -123,7 +124,8 @@ DATATOOLS.SERVER.UI.EXPLORER.UPDATE_OFFLINE_JOB = Save Offline
 DATATOOLS.SERVER.UI.EXPLORER.WORKOFFLINE_JOB = Work Offline
 DATATOOLS.SERVER.UI.CONNECTION.OFFLINE.MESSAGE = Offline content has not been found in your workspace.\nRun "Save Offline" when you are connected.
 DATATOOLS.SERVER.UI.CONNECTION.OFFLINE.TITLE = Connection failed
-DATATOOLS.SERVER.UI.CONNECTION.ERROR.MESSAGE = Connection has failed. The following error was reported:\n"{0}"\n\nDo you want to work offline?
+#Removed for bug 285485
+#DATATOOLS.SERVER.UI.CONNECTION.ERROR.MESSAGE = Connection has failed. The following error was reported:\n"{0}"\n\nDo you want to work offline?
 
 #
 ## Bookmark
