--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
@@ -54,35 +54,45 @@ profileProperty_PROFILE_NAME=Connection &Profile Name
 profileProperty_PROFILE_STORE_PATH=Connection Profile Store &URL
 profileProperty_GROUP_PROPERTIES=External Connection Profile Reference
 #
-querySpec_CUSTOM_AGGR_EXCEED_MAX_ARGS=The custom filter expression ({0}) has {1} arguments, but allows a maximum of {2} arguments.
+querySpec_CUSTOM_AGGR_EXCEED_MAX_ARGS=The custom aggregate expression ({0}) has {1} arguments, which exceeds the allowed maximum of {2} arguments.
 querySpec_CUSTOM_AGGR_INCOMPATIBLE_DUPL_CHECK=The custom aggregate type ({0}) cannot ignore duplicate values.
 querySpec_CUSTOM_AGGR_INCOMPATIBLE_NULL_CHECK=The custom aggregate type ({0}) cannot ignore null values.
 querySpec_CUSTOM_AGGR_LESS_THAN_MIN_ARGS=The custom aggregate expression ({0}) has {1} arguments, but requires a minimum of {2} arguments.
-querySpec_CUSTOM_FILTER_EXCEED_MAX_ARGS=The custom filter expression ({0}) has {1} arguments, but allows a maximum of {2} arguments.
+querySpec_CUSTOM_FILTER_EXCEED_MAX_ARGS=The custom filter expression ({0}) has {1} arguments, which exceeds the allowed maximum of {2} arguments.
 querySpec_CUSTOM_FILTER_LESS_THAN_MIN_ARGS=The custom filter expression ({0}) has {1} arguments, but requires a minimum of {2} arguments.
+querySpec_CUSTOM_FUNC_EXCEED_MAX_ARGS=The custom function value expression ({0}) has {1} arguments, which exceeds the allowed maximum of {2} arguments.
+querySpec_CUSTOM_FUNC_INCOMPATIBLE_DUPL_CHECK=The custom function type ({0}) cannot ignore duplicate values.
+querySpec_CUSTOM_FUNC_LESS_THAN_MIN_ARGS=The custom function value expression ({0}) has {1} arguments, but requires a minimum of {2} arguments.
 querySpec_EXTENSION_ID_NOT_FOUND=No {0} extension found with the id ({1}).
+querySpec_ILLEGAL_CONSTRUCTOR_ARG=Illegal {0} constructor argument
 querySpec_INVALID_AGGR_EXPR=Invalid aggregate expression.
 querySpec_INVALID_AGGR_HIDE_COLUMN=Invalid aggregate projection on a hidden column {0}.
 querySpec_INVALID_ARG=Invalid argument: {0}.
 querySpec_INVALID_CLASS_TYPE_ATTRIBUTE=Invalid class type ({0}).  The {1} attribute must be an instance of {2}.
+querySpec_INVALID_COLUMN_IDENTIFIER=Invalid column reference {0}.
 querySpec_INVALID_EXT_POINT_ATTR_VALUE=The {0} extension ({1}) has an invalid value ({2}) for the {3} attribute.
 querySpec_INVALID_EXT_POINT_ELEMENT=The {0} extension ({1}) is invalid.  See the schema definition for required content.
 querySpec_INVALID_FILTER_EXPR=Invalid filter expression.
 querySpec_INVALID_RESULT_PROJ=Invalid result projection.
 querySpec_INVALID_SORT_KEY=Invalid sort key.
 querySpec_INVALID_SORT_SPEC=Invalid sort specification.
+querySpec_INVALID_VALUE_EXPR=Invalid value expression.
 querySpec_MAX_ONE_NEGATING_EXPR=Cannot add more than one negating expression to a {0}.
 querySpec_MISSING_COMPOSITE_MIN_CHILDREN=The composite {0} must contain at least {1} child expressions.
 querySpec_MISSING_EXPR_VARIABLE=The filter expression ({0}) is missing an associated variable.
 querySpec_MISSING_EXT_POINT_ATTR_VALUE=The {0} extension ({1}) is missing the {2} attribute value in the {3} element.
 querySpec_MISSING_EXT_POINT_ELEMENT=The {0} extension ({1}) is missing the {2} element.
 querySpec_MISSING_EXT_POINT_MIN_ELEMENT=The {0} extension ({1}) must have at least one {2} element defined .
+querySpec_NON_DEFINED_COMBINED_OP=The expression combined operator type ({0}) is not found in the dynamicResultSet extension registry.
 querySpec_NON_DEFINED_CUSTOM_AGGR=The custom aggregate expression ({0}) is not found in the dynamicResultSet extension registry.
 querySpec_NON_DEFINED_CUSTOM_FILTER=The custom filter expression ({0}) is not found in the dynamicResultSet extension registry.
+querySpec_NON_DEFINED_CUSTOM_FUNC=The custom function ({0}) is not found in the dynamicResultSet extension registry.
 querySpec_NONSUPPORTED_NULL_ORDERING=Null ordering specification is not supported by the data source provider.
-querySpec_NONSUPPORTED_VAR_DATA_TYPE=The native data type ({0}) of the expression variable ({1}) is not supported by the type of custom expression used.
+querySpec_NONSUPPORTED_VAR_DATA_TYPE=The ODA data type ({0}) of the value expression ({1}) is not supported by the type of custom expression used.
 querySpec_NOT_EXPR_INCOMPATIBLE=Invalid use of a non-negatable expression ({0}) in a {1}.
 querySpec_NOT_EXPR_MISSING_CHILD=Missing negating expression in NotExpression: ({0}).
+querySpec_NULL_CONSTRUCTOR_3ARGS=Null {0} constructor argument(s): {1}, {2}, {3}.
+querySpec_NULL_CONSTRUCTOR_ARG=Null {0} constructor argument
 querySpec_UNABLE_ADD_TO_NON_LIST_COLLECTION=Unable to add a value to existing values.  The existing value is not a java.util.List.
 querySpec_UNEXPECTED_AGGR_EXPR_EXTENSION=Unable to support the custom aggregate expression ({0}) of other extension.
 querySpec_UNEXPECTED_AGGR_EXPR_TYPE=The custom aggregate expression ({0}) is not a {1} instance. Consumer application must use ExpressionFactory\#createCustomAggregate to create a custom expression instance.
