NEW - bug 276831: Common accelerator key used for Refresh & Properties https://bugs.eclipse.org/bugs/show_bug.cgi?id=276831 RESOLVED - bug 285485: Errors found in Java Properties Files https://bugs.eclipse.org/bugs/show_bug.cgi?id=285485

--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/src/org/eclipse/datatools/connectivity/sqm/server/internal/ui/l10n/datatoolsServerUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/src/org/eclipse/datatools/connectivity/sqm/server/internal/ui/l10n/datatoolsServerUI.properties
@@ -31,6 +31,7 @@ DATATOOLS.SERVER.UI.EXPLORER.VIRTUAL_FOLDER = Virtual Folder
 DATATOOLS.SERVER.UI.EXPLORER.HIERARCHICAL = Hierarchical
 DATATOOLS.SERVER.UI.EXPLORER.COLLAPSE_ALL = Collapse All
 DATATOOLS.SERVER.UI.EXPLORER.REFRESH = Ref&resh
+DATATOOLS.SERVER.UI.EXPLORER.PROPERTIES = &Properties
 
 #
 ## Filtering Decoration
