NEW - bug 285853: TVT35:TCT434: CHT: Duplicate mnemonic keys on Filter Properties pages https://bugs.eclipse.org/bugs/show_bug.cgi?id=285853

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
@@ -195,7 +195,7 @@ _UI_DESCRIPTION_FILTER = Specify a filter by selecting a predicate and entering 
 _UI_DESCRIPTION_SELECTION_ONLY = Specify a filter by indicating whether to include or exclude a selection of items.
 _UI_DESCRIPTION_EXPRESSION_ONLY = Specify a filter by selecting a predicate and entering a value.
 _UI_RADIO_BUTTON_EXPRESSION = &Expression
-_UI_LABEL_EXPRESSION = N&ame
+_UI_LABEL_EXPRESSION = &Name
 _UI_COMBO_STARTS_WITH = Starts with the characters
 _UI_COMBO_NOT_START_WITH = Does not start with the characters
 _UI_COMBO_CONTAINS = Contains the characters
