CheckIn: Fix bugzilla bug 295555 Refactor the codes of XML data set pages[15547]

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -76,6 +76,8 @@ ColumnMappingDialog.info.xPath=&XPath Expression:
 ColumnMappingDialog.info.dataType=&Data Type:
 ColumnMappingDialog.dialog.info=Select one of the predefined XPath for the current column, or please enter another XPath expression. 
 ColumnMappingDialog.prompt.maxRow=The source data is more than 500 lines. Only the first 500 lines can be previewed in this page.
+ColumnMappingDialog.MenuItem.CreateParameter=Create Parameter
+ColumnMappingDialog.MenuItem.DeleteParameter=Delete Parameter
 XMLDataPreviewDialog.title=Sample XML Data
 
 dataset.editor.columnName=Name
