--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
@@ -1,6 +1,6 @@
 #
 #************************************************************************
-# Copyright (c) 2006, 2009 Actuate Corporation.
+# Copyright (c) 2006, 2010 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -60,6 +60,8 @@ profileStoreCreationDialog_title=Create a Connection Profile Store
 profileStoreCreationDialog_grouptext=Select the connection &profiles to be included in the store:
 profileStoreCreationDialog_newbutton_tooltiptext=Create a new connection profile
 dbProfilePage_defaultPageMessage=Verify the JDBC Driver and Connection Details
+dbProfilePage_editPageMessage=Edit the JDBC Driver and Connection Details
+dbProfilePage_invalidDataSource=Invalid data source.  Update the connection profile reference, or create a new data source instead.
 dbProfilePage_notInDesignSession=Unable to open a property page outside of an ODA design session.
 dbProfilePage_noCustomPage=Unable to find and open the database driver specific property page.
 preferencesPage_openDataAccessDescription=Set the preferences for individual Open Data Access data sources \nby using the pages under this node.
