--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
@@ -46,7 +46,7 @@ soapParametersPage.column.paramName=N&ame
 soapParametersPage.column.dataType=Data &Type
 
 # SoapRequestPage
-soapRequestPage.message.default=Edit the SOAP request template of this data set. You may leave the text empty if your data source's custom connecion class code does not require a query text.
+soapRequestPage.message.default=Edit the SOAP request template of this data set. You may leave the text empty if your custom connection class does not require a query text.
 soapRequestPage.message.regenerateTemplate=This will regenerate the query text template based on the SOAP operation you have selected. It will remove any modifications you have made to the text.\n\nAre you sure?
 soapRequestPage.title.regenerateTemplate=Regenerate Template
 soapRequestPage.button.regenerateTemplate=&Regenerate Template
