--- a/plugins/org.eclipse.datatools.connectivity.oda.design/src/org/eclipse/datatools/connectivity/oda/design/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design/src/org/eclipse/datatools/connectivity/oda/design/nls/messages.properties
@@ -1,6 +1,6 @@
 #
 #************************************************************************
-# Copyright (c) 2005, 2006 Actuate Corporation.
+# Copyright (c) 2005, 2010 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -11,6 +11,8 @@
 #  
 #************************************************************************
 #
+design_invalidResourceFileName=Invalid resource file name ({0}); it must end with .properties.
+design_invalidResourceKey=Invalid resource key ({0}); it must not contain any embedded white space.
 design_nullArgument=Argument must not be null.
 design_missingDataSourceDesign=Missing data source design in OdaDesignSession instance.
 design_missingId=Missing data source ID in data source design.
