[304016] Modified plugin o.e.d.sqltools.ddlgen.ui to enhance the DDL generation (FE) wizard

--- a/plugins/org.eclipse.datatools.sqltools.ddlgen.ui/src/org/eclipse/datatools/sqltools/ddlgen/internal/ui/l10n/FEUI.properties
+++ b/plugins/org.eclipse.datatools.sqltools.ddlgen.ui/src/org/eclipse/datatools/sqltools/ddlgen/internal/ui/l10n/FEUI.properties
@@ -60,7 +60,7 @@ FEWizard.SelectFilePage.specifyValidFolderMessage 	= The specified folder does n
 FEWizard.SelectFilePage.specifyFileMessage 			= Specify a file name.
 FEWizard.SelectFilePage.invalidFileExtensionMessage = The file extension must be ".sql".
 FEWizard.SelectFilePage.ddlPreviewGroup 			= Preview DDL
-FEWizard.SelectFilePage.defaultScriptFileBaseName 	= script
+FEWizard.SelectFilePage.defaultScriptFileBaseName 	= Script
 FEWizard.SelectFilePage.terminatorLabel 			= &Statement terminator:
 FEWizard.SelectFilePage.terminatorApplyButton 		= &Apply
 FEWizard.SelectFilePage.openDDLCheckbox 			= O&pen DDL file for editing
