--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
@@ -1,6 +1,6 @@
 #
 #************************************************************************
-# Copyright (c) 2004, 2009 Actuate Corporation.
+# Copyright (c) 2004, 2010 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -100,3 +100,5 @@ querySpec_UNEXPECTED_AGGR_EXPR_TYPE=The custom aggregate expression ({0}) is not
 querySpec_UNEXPECTED_CUSTOM_EXPR_EXTENSION=Unable to support the custom filter expression ({0}) of other extension.
 querySpec_UNEXPECTED_CUSTOM_EXPR_TYPE=The custom filter expression ({0}) is not a {1} instance.\n Consumer application must use ExpressionFactory\#createCustomExpression to create a custom filter expression instance.
 querySpec_UNEXPECTED_EXPR_VARIABLE_TYPE=Cannot support this type of ExpressionVariable ({1}).
+querySpec_UNEXPECTED_FUNC_EXPR_EXTENSION=Unable to support the custom function ({0}) of other extension.
+querySpec_UNEXPECTED_FUNC_EXPR_TYPE=The custom function ({0}) is not a {1} instance. Consumer application must use ExpressionFactory\#createCustomFunction to create a custom function instance.
