[311401] Modified mnemonics for new connection wizard in plugins o.e.d.connectivity.ui and o.e.d.connectivity.apache.derby.ui

--- a/plugins/org.eclipse.datatools.connectivity.apache.derby.ui/src/org/eclipse/datatools/connectivity/apache/derby/internal/ui/connection/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.apache.derby.ui/src/org/eclipse/datatools/connectivity/apache/derby/internal/ui/connection/drivers/messages.properties
@@ -1,9 +1,9 @@
 DerbyEmbeddedDriverUIContributor.0=D&atabase location\:
 DerbyEmbeddedDriverUIContributor.1=B&rowse...
-DerbyEmbeddedDriverUIContributor.2=&Create database (if required)
-DerbyEmbeddedDriverUIContributor.3=Up&grade database to current version
-DerbyEmbeddedDriverUIContributor.url.label = &URL\:
-DerbyEmbeddedDriverUIContributor.userName.label = U&ser name\:
+DerbyEmbeddedDriverUIContributor.2=Cr&eate database (if required)
+DerbyEmbeddedDriverUIContributor.3=U&pgrade database to current version
+DerbyEmbeddedDriverUIContributor.url.label = UR&L\:
+DerbyEmbeddedDriverUIContributor.userName.label = &User name\:
 DerbyEmbeddedDriverUIContributor.password.label = Pass&word:
 DerbyEmbeddedDriverUIContributor.persistpassword.label = Sa&ve password
 DerbyEmbeddedDriverUIContributor.optionalProps.label = Optional &properties\:
@@ -14,9 +14,9 @@ DerbyEmbeddedDriverUIContributor.summary.password.label = Password
 DerbyEmbeddedDriverUIContributor.summary.url.label = URL
 DerbyEmbeddedDriverUIContributor.FileDialog.title.filebrowse = Browse for Database Folder
 DerbyEmbeddedDriverUIContributor.FileDialog.msg.filebrowse = Select the folder that corresponds to your Derby database.
-DerbyEmbeddedDriverUIContributor.general.tab = G&eneral
+DerbyEmbeddedDriverUIContributor.general.tab = &General
 DerbyEmbeddedDriverUIContributor.optional.tab = &Optional
-DerbyEmbeddedDriverUIContributor.optionalproperties.label = Optional properties:
+DerbyEmbeddedDriverUIContributor.optionalproperties.label = Optional &properties:
 CUI_NEWCW_SAVE_PASSWORD_SUMMARY_DATA_TEXT_ = Save password
 CUI_NEWCW_TRUE_SUMMARY_DATA_TEXT_ = true
 CUI_NEWCW_FALSE_SUMMARY_DATA_TEXT_ = false
