[311402] Modified mnemonics for the New SQL File Editor wizard in plugin o.e.d.sqltools.sqlscrapbook to eliminate conflicts

--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/connection/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/connection/messages.properties
@@ -2,7 +2,7 @@ SelectProfileDialog_title=Select Profile for the Editor
 SelectProfileDialog_create=C&reate...
 SelectProfileDialog_warning=Warning\!\n  The full feature of the editor will not be available without connection.
 SelectProfileDialog_error_jdbc_title=Connection Error
-SelectProfileDialog_profile_name=Connection profile &name:
+SelectProfileDialog_profile_name=C&onnection profile name:
 SelectProfileDialog_profile_type=Database server &type:
 SelectProfileDialog_donot_connect=&Do not connect now
 SelectProfileDialog_error_jdbc_message=Error occurred while trying to establish connection
@@ -11,7 +11,7 @@ SelectProfileDialog_noprofile=There is no connection profile associated with thi
 SelectProfileDialog_wrongprofile=The connection profile (\"{0}\") associated with this resource is not valid. Select a connection profile type/name.
 SelectProfileDialog_override_profile=&Persist the target connection information
 SelectProfileDialog_override_profile_tooltip=Select this option to persist the target connection information with the files
-ConnectionInfoGroup_database_name=Data&base name:
+ConnectionInfoGroup_database_name=Databa&se name:
 #simplified labels
 ConnectionInfoGroup_profile=Connection &profile:
 ConnectionInfoGroup_profile_group=Connection &profile
