[311412] Modified a mnemonic in the messages.properties file in plugin o.e.d.sqltools.sqlbuilder to avoid a conflict

--- a/plugins/org.eclipse.datatools.sqltools.sqlbuilder/src/org/eclipse/datatools/sqltools/sqlbuilder/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlbuilder/src/org/eclipse/datatools/sqltools/sqlbuilder/messages.properties
@@ -294,7 +294,7 @@ _UI_TOOLTIP_HIDE_PANE=Hide Pane
 _UI_PREFERENCES_OMIT_SCHEMA_DESC=Default values for the Omit Current Schema settings associated with SQL statements
 _UI_PREFERENCES_OMIT_SCHEMA_IN_SQL=&Omit current schema in generated SQL statements
 _UI_PREFERENCES_OMIT_SCHEMA_SPECIFY_SCHEMA_GROUP_TITLE=Current schema
-_UI_PREFERENCES_OMIT_SCHEMA_USE_AUID_AS_CURRENT_SCHEMA=&Authorization ID
+_UI_PREFERENCES_OMIT_SCHEMA_USE_AUID_AS_CURRENT_SCHEMA=A&uthorization ID
 _UI_PREFERENCES_OMIT_SCHEMA_SCHEMA_NAME=&Schema name:
 
 !dialogs/ChangeStatementTypeDialog
