[312837] Modified message.properties in pluing o.e.d.sqltools.schemaobjecteditor.ui to remove mnemonic conflicts in the slosh buttons.

--- a/plugins/org.eclipse.datatools.sqltools.schemaobjecteditor.ui/src/org/eclipse/datatools/sqltools/schemaobjecteditor/ui/internal/preference/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.schemaobjecteditor.ui/src/org/eclipse/datatools/sqltools/schemaobjecteditor/ui/internal/preference/messages.properties
@@ -8,10 +8,10 @@ SchemaObjectEditorPreferencePage_error=Error
 SchemaObjectEditorPreferencePage_can_not_remove=Cannot remove the required item(s)
 SchemaObjectEditorPreferencePage_remove_all=R&emove All>>
 SchemaObjectEditorPreferencePage_erroe=Error
-SchemaObjectEditorPreferencePage_add=<<&Add
+SchemaObjectEditorPreferencePage_add=&<<Add
 SchemaObjectEditorPreferencePage_add_all=<<Add A&ll
 SchemaObjectEditorPreferencePage_move_up=Move &Up
-SchemaObjectEditorPreferencePage_move_down=Move &Down
+SchemaObjectEditorPreferencePage_move_down=&Move Down
 SchemaObjectEditorPreferencePage_available_pages=Available &pages:
 SchemaObjectEditorPreferencePage_question=Question
 SchemaObjectEditorPreferencePage_save_modification=Save the modification?
