--- a/plugins/org.eclipse.datatools.connectivity.oda.profile/src/org/eclipse/datatools/connectivity/oda/profile/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.profile/src/org/eclipse/datatools/connectivity/oda/profile/nls/messages.properties
@@ -1,6 +1,6 @@
 #
 #************************************************************************
-# Copyright (c) 2005, 2006 Actuate Corporation.
+# Copyright (c) 2005, 2010 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -12,3 +12,4 @@
 #************************************************************************
 #
 constants_componentName=DTP Open Data Access
+propertyProvider_CANNOT_FIND_PROFILE=Unable to find or access the named profile ({0}) in profile store path ({1}).
