--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.iseries.ui/src/org/eclipse/datatools/enablement/ibm/db2/iseries/internal/ui/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.iseries.ui/src/org/eclipse/datatools/enablement/ibm/db2/iseries/internal/ui/drivers/messages.properties
@@ -25,6 +25,8 @@ CUI_NEWCW_HOST_SUMMARY_DATA_TEXT_ = Host
 CUI_NEWCW_PORT_SUMMARY_DATA_TEXT_ = Port number
 CUI_NEWCW_USERNAME_SUMMARY_DATA_TEXT_ = User name
 CUI_NEWCW_SAVE_PASSWORD_SUMMARY_DATA_TEXT_ = Save password
+CUI_NEWCW_DEFAULT_SCHEMA_LBL_UI_ = Default schema:
+CUI_NEWCW_DEFAULT_SCHEMA_SUMMARY_DATA_TEXT_ = Default schema
 CUI_NEWCW_TRUE_SUMMARY_DATA_TEXT_ = true
 CUI_NEWCW_FALSE_SUMMARY_DATA_TEXT_ = false
 CUI_NEWCW_URL_SUMMARY_DATA_TEXT_ = URL
