--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries.ui/src/org/eclipse/datatools/enablement/ibm/db2/zseries/internal/ui/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries.ui/src/org/eclipse/datatools/enablement/ibm/db2/zseries/internal/ui/drivers/messages.properties
@@ -19,6 +19,8 @@ CUI_NEWCW_CONNECTIONURL_LBL_UI_= Connection UR&L:
 CUI_NEWCW_TBCREATOR_LBL_UI = &Retrieve objects created by this user only
 CUI_NEWCW_USERNAME_LBL_UI_ = User n&ame:
 CUI_NEWCW_PASSWORD_LBL_UI_ = Pass&word:
+CUI_NEWCW_DEFAULT_SCHEMA_LBL_UI_ = Default schema:
+CUI_NEWCW_DEFAULT_SCHEMA_SUMMARY_DATA_TEXT_ = Default schema
 CUI_NEWCW_SAVE_PASSWORD_LBL_UI_ = Sa&ve password
 CUI_NEWCW_DATABASE_SUMMARY_DATA_TEXT_ = Location
 CUI_NEWCW_HOST_SUMMARY_DATA_TEXT_ = Host
