[BZ319831] Delivered change for "Jar List" tab to become "JAR List"

--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
@@ -126,5 +126,5 @@ DelimitedStringList.ValidationMsg.NoCommas = Commas not allowed within parameter
 DriverDialog.AllFilter=All
 DriverDialog.NameColumn=Name
 DriverDialog.Name.Type.Tab=Name/Type
-DriverDialog.JarList.Tab=Jar List
+DriverDialog.JarList.Tab=JAR List
 DriverDialog.Version=System Version
