--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/src/org/eclipse/datatools/connectivity/sqm/server/internal/ui/l10n/datatoolsServerUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/src/org/eclipse/datatools/connectivity/sqm/server/internal/ui/l10n/datatoolsServerUI.properties
@@ -32,6 +32,7 @@ DATATOOLS.SERVER.UI.EXPLORER.HIERARCHICAL = Hierarchical
 DATATOOLS.SERVER.UI.EXPLORER.COLLAPSE_ALL = Collapse All
 DATATOOLS.SERVER.UI.EXPLORER.REFRESH = Ref&resh
 DATATOOLS.SERVER.UI.EXPLORER.PROPERTIES = &Properties
+DATATOOLS.SERVER.UI.EXPLORER.PROPERTIES_DIALOG_TITLE = Filter Properties
 
 #
 ## Filtering Decoration
