--- a/plugins/org.eclipse.datatools.connectivity.oda.consumer/src/org/eclipse/datatools/connectivity/oda/consumer/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.consumer/src/org/eclipse/datatools/connectivity/oda/consumer/nls/messages.properties
@@ -29,3 +29,4 @@ helper_cannotGetResultSetMdBeforePrepare=Cannot get result set metadata before s
 helper_cannotExecuteBeforePrepare=Cannot execute the statement before statement has been prepared.
 helper_missingDriverInfo=Missing ODA data source id or extension manifest.
 helper_extension_mustImplementInterface=Invalid class ({0}) implementation.  Must implement the Java interface ({1}).
+helper_unknownPluginLogPath=Unable to resolve the log directory.  ResourceIdentifiers found in appContext: {0}
