[338297] Connection profile created from a deprecated ODA Extension is not selectable

--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
@@ -1,6 +1,6 @@
 #
 #************************************************************************
-# Copyright (c) 2006, 2010 Actuate Corporation.
+# Copyright (c) 2006, 2011 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -55,6 +55,7 @@ profilePage_checkboxTooltip_maintainLink=Always use the Connection Profile Store
 profilePage_checkboxLabel_maintainLink=Use &externalized properties in Connection Profile Store
 profilePage_error_invalidName=Data source name is invalid.
 profilePage_error_invalidProfileStorePath=Invalid path for a connection profile store
+profilePage_deprecatedProfileDisplayName={0} (replaced by {1})
 profileStoreCreationDialog_button_new=Ne&w...
 profileStoreCreationDialog_title=Create a Connection Profile Store
 profileStoreCreationDialog_grouptext=Select the connection &profiles to be included in the store:
