--- a/plugins/org.eclipse.datatools.enablement.oda.xml/src/org/eclipse/datatools/enablement/oda/xml/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/src/org/eclipse/datatools/enablement/oda/xml/i18n/messages.properties
@@ -12,6 +12,7 @@
 #
 Connection.PropertiesMissing=Some connection properties are missing.
 Connection.InvalidAppContext=Invalid AppContext.
+Connection.InvalidSource=The xml source file cannot be found or the URL is malformed.
 Constants.DriverName=DTP ODA XML Driver
 ResultSet.ResultSetClosed=ResultSet is closed.
 Query.QueryHasNotBeenPrepared=The query has not been prepared yet.
@@ -26,3 +27,4 @@ dateFormatISO8601.inconvertibleValueError=Cannot convert the value of
 exception.invalidArgument=Invalid argument type.
 exception.nullDataSourceContent=Data source content is null.
 ui.invalidXSDFile=The provided xsd file is invalid.
+
