CheckIn: Fix bugziila bug 300307 Problems in Soap Request page of web service data set.[32333]

--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
@@ -46,8 +46,9 @@ soapParametersPage.column.paramName=N&ame
 soapParametersPage.column.dataType=Data &Type
 
 # SoapRequestPage
-soapRequestPage.message.default=Edit the SOAP request template of this data set. You may leave the text empty if your custom connection class does not require a query text.
+soapRequestPage.message.defaultTitle=Edit the SOAP request template of this data set. 
 soapRequestPage.message.regenerateTemplate=This will regenerate the query text template based on the SOAP operation you have selected. It will remove any modifications you have made to the text.\n\nAre you sure?
+soapRequestPage.label.prompt=You may leave the text empty if your custom connection class does not require a query text.
 soapRequestPage.title.regenerateTemplate=Regenerate Template
 soapRequestPage.button.regenerateTemplate=&Regenerate Template
 soapRequestPage.button.insertParameter=&Edit Parameter...
