FlatFile Dataset chokes if all lines don't have same comma count. [32325]

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
@@ -26,6 +26,7 @@ label.flatfileComma=CSV
 label.flatfileSemicolon=SSV
 label.flatfilePipe=PSV
 label.flatfileTab=TSV
+label.trailNull=Use trailing null columns.
 
 button.selectFolder.browse=B&rowse...
 button.moveUp=&Up
@@ -57,6 +58,7 @@ tooltip.button.add=Add all the selected columns from the left table to the flat 
 tooltip.button.up=Move up the selected item.
 tooltip.button.down=Move down the selected item.
 tooltip.button.delete=Delete the selected item.
+tooltip.trailNull=Trail null columns when reading lines of data. 
 error.selectFolder=Please select a valid folder.
 error.selectColumns=Please select at least one column for this data set.
 error.emptyPath=Please enter a path.
