--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
@@ -23,7 +23,7 @@ query_ARGUMENT_ERROR=The argument should be either 'NAME' or 'TYPE'.
 query_IO_EXCEPTION=An I/O Exception occurred when reading the file.
 query_SOURCE_DATA_ERROR=Duplicate column names found in source data.
 query_COLUMN_NAME_ERROR=Column name error
-query_INVALID_FLAT_FILE=The flatfile data source is not valid.
+query_INVALID_FLAT_FILE=The flatfile data source is not valid. Please use trail null columns to disable columns number validation.
 query_text_error=Query-text format error
 resultSet_COLUMN_NOT_FOUND=Column not found:
 resultSet_CURSOR_HAS_NOT_BEEN_INITIALIZED=Cursor has not been initialized yet.
