CheckIn: Fix bugzilla bug 301764 Cancel does not work in WSDL Operation change confirmation dlg [32335].

--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
@@ -33,7 +33,7 @@ webServiceSelectionPage.button.browse=B&rowse...
 
 # OperationPage
 operationPage.message.default=Select an operation defined in the data source's WSDL descriptor.
-operationPage.message.operationChanged=Confirm to regenerate the SOAP request and reconnect the End Point.
+operationPage.message.regenerate.SOAPRequest=Regenerate the SOAP request and reconnect the End Point according to the changed operation.
 operationPage.title.operationChanged=Operation Changed
 operationPage.label.selectOpearation=&Selected Operation
 operationPage.label.document=&Documentation
