Add shortcut key 'n' to "Use trailing null columns" checkbox. [39692]

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
@@ -26,7 +26,7 @@ label.flatfileComma=CSV
 label.flatfileSemicolon=SSV
 label.flatfilePipe=PSV
 label.flatfileTab=TSV
-label.trailNull=Use trailing null columns.
+label.trailNull=Use trailing &null columns.
 
 button.selectFolder.browse=B&rowse...
 button.moveUp=&Up
