Updated a dummy message for test purpose.

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
@@ -82,4 +82,4 @@ confirm.reselectFileFilterMessage=Selecting a different file filter will leave p
 confirm.reselectFileNameTitle=Confirm to select a different flat file.
 confirm.reselectFileNameMessage=Do you want to preserve the columns selection the same as the current definition?
 warning.columnNotExist=The selected column "{0}" does not exist!
-warning.dummy=Test warining
+warning.dummy=Test warining Updated
