Add remote flat file support. [41597]

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
@@ -14,7 +14,11 @@
 # Exception messages for the Oda Flat File Driver
 
 connection_CONNECTION_PROPERTIES_MISSING=Connection properties are missing.
-connection_CANNOT_OPEN_FLAT_FILE_DB_DIR=Cannot open flat file database under directory: 
+connection_CANNOT_OPEN_FLAT_FILE_DB_DIR=Cannot open flat file home folder: 
+connection_CANNOT_OPEN_FLAT_FILE_URI=Cannot open flat file from URI <{0}>, because: <{1}>.
+connection_MISSING_FILELOCATION=Missing required connection properties: home folder for local flat file and URI for remote flat file. 
+connection_MISSING_HOMEFOLDER=Missing required connection properties: Home folder for local flat files 
+connection_MISSING_FILEURI=Missing required connection properties: File URI for remote flat file. 
 
 query_COMMAND_IS_EMPTY=Query command is empty.
 query_DO_NOT_SUPPORT_CROSS_TABLE_QUERY=Cross-table query is not supported.
