--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
@@ -12,10 +12,12 @@
 #************************************************************************
 #
 wizard.title.selectColumns=Select Columns
-wizard.defaultMessage.selectFolder=Select the folder that contains the flat files.
+wizard.defaultMessage.selectFolder=Select a folder that contains the flat files or enter an URI for the flat file.
 wizard.defaultMessage.selectFile=Select the file and the columns for the data set.
 
-label.selectFolder=S&elect folder: 
+label.selectFolder=S&elect home folder: 
+label.fileURI=Enter file &URI:
+lable.fileURI.tooltip=Enter a URI for the file or select a local file. 
 label.selectFile=Select f&ile:
 label.fileFilter=File filte&r:
 label.includeTypeLine=Use second line as &data type indicator.
@@ -29,6 +31,8 @@ label.flatfileTab=TSV
 label.trailNull=Use trailing &null columns.
 
 button.selectFolder.browse=B&rowse...
+button.selectFileURI.browse=&Local File
+button.selectFileURI.browse.tooltips=Select a local file URI.
 button.moveUp=&Up
 button.moveDown=Do&wn
 button.delete=D&elete
@@ -73,6 +77,9 @@ error.duplicatedNameValueOrEmpty=Duplicated Name Value or Empty
 error.invalidSavedColumnsInfo = Invalid saved Columns Info
 error.invalidColumnName=Invalid Column Name
 error.invalidQureyText=Invalid Query-Text
+error.invalidURIPath=The URI entered is invalid.
+error.URIConnectionFailure=Cannot open connection to the URI resource.
+ 
 
 title.warning=Warning
 warning.fileExtensionInvalid=The selected file might not be a valid flat file.
