[357574] Support use of Relative File Path for exported Connection Profile Storage in ODA Framework

--- a/plugins/org.eclipse.datatools.connectivity.oda.profile/src/org/eclipse/datatools/connectivity/oda/profile/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.profile/src/org/eclipse/datatools/connectivity/oda/profile/nls/messages.properties
@@ -1,6 +1,6 @@
 #
 #************************************************************************
-# Copyright (c) 2005, 2010 Actuate Corporation.
+# Copyright (c) 2005, 2011 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -13,3 +13,4 @@
 # 
 constants_componentName=DTP Open Data Access
 propertyProvider_CANNOT_FIND_PROFILE=Unable to find or access the named profile ({0}) in profile store path ({1}).
+propertyProvider_UNABLE_TO_RESOLVE_PATH=The ResourceIdentifiers ({0}) provided in the appContext was unable to resolve the connection profile store file's relative path ((1}).
