[357574] Support use of Relative File Path for exported Connection Profile Storage in ODA Design UI Framework

--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
@@ -46,7 +46,12 @@ profilePage_pageLabel=Connection Profile
 profilePage_selectProfileDefaultMessage=Select the connection profile from which to create a data source
 profilePage_label_profileStore=Connection Profile &Store:
 profilePage_button_browse=B&rowse...
+profilePage_button_relativepath=Relative Path
+profilePage_button_absolutepath=Absolute Path
 profilePage_button_new=Ne&w...
+profilePage_button_browse_tooltip=Browse for a connection profile store file.\nRelative path: the relative path based on the host resources.\nAbsolute path: the absolute path of the file system.
+profilePage_resourcebaseuri_failure=Failed to get the application resource base URI!
+profilePage_browse_noselection_error=Please specify a connection profile store file name 
 profilePage_odaTreeName=ODA Data Sources
 profilePage_checkboxLabel_useDefaultName=&Use the default data source name
 profilePage_label_dataSourceName=&Data Source Name:
