[359154] Enforce default file extension for ODA connection profiles store

--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
@@ -11,6 +11,7 @@
 #  
 #************************************************************************
 #
+adaptableDataSourceProfile_unableAccessProfile=Unable to access the linked profile in ({0}); using the local properties in the data source design instead.\n Caused by exception: {1}
 common_notInDesignSession=Not currently in a design session.
 common_nullArgument=Argument must not be null.
 common_missingDataSourceDesign=Missing data source design in OdaDesignSession argument.
@@ -46,8 +47,10 @@ profilePage_pageLabel=Connection Profile
 profilePage_selectProfileDefaultMessage=Select the connection profile from which to create a data source
 profilePage_label_profileStore=Connection Profile &Store:
 profilePage_button_browse=B&rowse...
-profilePage_button_relativepath=Relative Path
-profilePage_button_absolutepath=Absolute Path
+profilePage_button_relativepath=&Relative Path
+profilePage_button_absolutepath=&Absolute Path
+profilePage_button_browse_filter=File &extension(s) to display:
+profilePage_button_browse_filter_tooltiptext=Specify one or more comma-separated file extensions to filter the files displayed below.\nFor example: .txt, .profiles
 profilePage_button_new=Ne&w...
 profilePage_button_browse_tooltip=Browse for a connection profile store file.\nRelative path: the relative path based on the host resources.\nAbsolute path: the absolute path of the file system.
 profilePage_resourcebaseuri_failure=Failed to get the application resource base URI!
@@ -65,6 +68,7 @@ profileStoreCreationDialog_button_new=Ne&w...
 profileStoreCreationDialog_title=Create a Connection Profile Store
 profileStoreCreationDialog_grouptext=Select the connection &profiles to be included in the store:
 profileStoreCreationDialog_newbutton_tooltiptext=Create a new connection profile
+profileStoreCreationDialog_fileext_error=A connection profile store file must have a file extension.\nPress OK to add the default file extension ".{0}" to the file name.
 dbProfilePage_defaultPageMessage=Verify the JDBC Driver and Connection Details
 dbProfilePage_editPageMessage=Edit the JDBC Driver and Connection Details
 dbProfilePage_invalidDataSource=Invalid data source.  Update the connection profile reference, or create a new data source instead.
