[357574] Refined logging for Relative File Path of ODA Connection Profile Stores

--- a/plugins/org.eclipse.datatools.connectivity.oda.profile/src/org/eclipse/datatools/connectivity/oda/profile/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.profile/src/org/eclipse/datatools/connectivity/oda/profile/nls/messages.properties
@@ -15,4 +15,5 @@ constants_componentName=DTP Open Data Access
 profileFileExtension_APPLIED_DEFAULT_FILE_EXT=Applied the default file extension ({0}) contributed by the {1} extension in {2}.
 profileFileExtension_MULTIPLE_EXTENSIONS_FOUND=Multiple extensions of the {0} extension point are found.  Only one of them will be applied.
 propertyProvider_CANNOT_FIND_PROFILE=Unable to find or access the named profile ({0}) in profile store path ({1}).
-propertyProvider_UNABLE_TO_RESOLVE_PATH=The ResourceIdentifiers ({0}) provided in the appContext was unable to resolve the connection profile store file's relative path ((1}).
+propertyProvider_NO_RESOURCE_IDENTIFIERS=No ResourceIdentifiers is available in the appContext to resolve the connection profile store file's relative path ({0}).
+propertyProvider_UNABLE_TO_RESOLVE_PATH=The ResourceIdentifiers ({0}) provided in the appContext was unable to resolve the connection profile store file's relative path ({1}).\nPlease check that the file is located under the application resources folder: {2}
