CheckIn: Fix an issue - Update the description of the dialog which selects folder for flat file.

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
@@ -12,8 +12,10 @@
 #************************************************************************
 #
 wizard.title.selectColumns=Select Columns
-wizard.defaultMessage.selectFolder=Select a folder that contains the flat files or enter an URI for the flat file.
 wizard.defaultMessage.selectFile=Select the file and the columns for the data set.
+wizard.WizardTitle.DEFAULT_MESSAGE=Select a folder that contains the flat files or enter an URI for the flat file.
+
+FolderSelectionPageHelper.SelectFolderDialog.Title=Select a folder that contains the flat files.
 
 label.selectFolder=S&elect home folder: 
 label.fileURI=Enter file &URI:
@@ -98,3 +100,5 @@ Connection.warning.untested=Connection has not been tested. Please test connecti
 Connection.error.invalidPath=No valid flat file locations found.
 Connection.error.invalidHomeFolder=Invalid flat file home folder <{0}>.
 Connection.error.invalidFileURI=Invalid flat file URI path <{0}>.
+
+RelativeFileSelectionDialog.Title.SelectFile=Select File
