fix ted 42447, throw exception when the service and port are null

--- a/plugins/org.eclipse.datatools.enablement.oda.ws/src/org/eclipse/datatools/enablement/oda/ws/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws/src/org/eclipse/datatools/enablement/oda/ws/i18n/messages.properties
@@ -17,3 +17,5 @@ webservice.soap.fault=A SOAP error occurred.
 webservice.soap.fault.faultcode=Fault code
 webservice.soap.fault.faultstring=Fault string
 webservice.soap.fault.reason=Reason
+service.notexist=cannot get service
+port.notexist=cannot get port
